<resources>
    <string name="app_name">Weather</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_about">About</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>


    <string name="super_script">&#8304;</string>
    <string name="search_prompt">Enter a city name to search</string>
    <string name="search">Search</string>
    <string name="city_weather">City Weather</string>
    <string name="saved_cities">Saved Cities</string>
    <string name="settings">Settings</string>
    <string name="error_message_obtaining_location">We were unable to retrieve your location, Please try again later or search</string>
    <string name="error_location_not_found">An Error Occurred but you can search for city manually</string>
    <string name="no_location_found_error">Sadly we couldnt locate you, but you can search manually as well</string>
    <string name="location_security_error">An error occurred, but you can also search manually!!</string>
    <string name="location_denied_error">We need to access device location to get weather data but you can also search manually!!</string>
    <string name="search_prompt_text">Please type in a search criteria</string>
    <string name="ok">OK</string>
    <string name="returned_error">We run into a problem</string>
    <string name="server_error">SERVERS ARE DOWN</string>
    <string name="unkown_error">NOT SURE WHAT HAPPENED</string>


    <!--setting for terms of use-->
    <string name="pref_header_terms_of_use">Terms of use</string>

    <!--setting for enable or disable location-->
    <string name="pref_header_enable_or_disable_location">Enable/Disable location</string>

    <!--setting for temperature unit-->
    <string name="pref_header_temperature_unit">Temperature unit</string>

    <string name="add_city">Add City</string>
    <string name="add">Add</string>
    <string name="error_location">We couldn\'t find the location you are looking for, please try again</string>

</resources>
